# pars_yandex

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
parsDisk/: example_usage.py  handlers.py  image_similarity.py  workBitrix.py  workTelegram.py  ydWork copy.py  ydWork.py  yd_example_usage.py  yd_image_similarity.py
pars_yandex/: handlers.py  pars_avito.py  selenium2.py  telegramWork.py  test.py  workSelenium.py  workTelegram.py
pars_yandex/parser/: Dockerfile  handlers.py  pars_avito.py  pars_cian.py  postgreWork.py  workBitrix.py  workSelenium.py
pars_yandex/sender/: Dockerfile  handlers.py  postgreWork.py  pyproject1.toml  telegramYDwork.py  test1.py  workBitrix.py  workGS.py  workTelegram.py  ydWork.py
